--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,4 +1,12 @@
+cmake_minimum_required(VERSION 2.8)
 project(BaseProject)
+
+include(CheckIncludeFileCXX)
+
+CHECK_INCLUDE_FILE_CXX(cstdint HAVE_CSTDINT)
+if(HAVE_CSTDINT)
+    add_definitions(-D_HAS_CSTDINT_=1)
+endif(HAVE_CSTDINT)
 
 add_subdirectory(thirdparty)
 add_subdirectory(common)
