--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -13,7 +13,18 @@ file(GLOB COMMON_SOURCE_FILES
     threading_wrapper.cpp
     )
 
+if(UNIX)
+    set(PLATFORM_LIBRARIES ${CMAKE_DL_LIBS})
+    list(APPEND PLATFORM_LIBRARIES m pthread)
+endif(UNIX)
+
 add_library(common STATIC
     ${COMMON_HEADER_FILES}
     ${COMMON_SOURCE_FILES}
     )
+
+if(UNIX)
+    target_link_libraries(common
+        ${PLATFORM_LIBRARIES}
+        )
+endif(UNIX)
