cmake: Build MFCDlgMainApp only when VS2010 or newer.

--- a/source/gui/CMakeLists.txt
+++ b/source/gui/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_subdirectory(MFCDlgMainApp)
+if(MSVC_VERSION GREATER_EQUAL 1600) # VS2010 or newer
+    add_subdirectory(MFCDlgMainApp)
+endif(MSVC_VERSION GREATER_EQUAL 1600)
